Integrated reading time

--- a/_posts/2017-10-02-test.markdown
+++ b/_posts/2017-10-02-test.markdown
@@ -9,4 +9,36 @@ tags:
 - ES6
 ---
 
-This is a test
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada at quam sed convallis. Donec mollis vulputate finibus. Aliquam vel turpis nec orci pharetra lobortis. Nulla et eleifend diam, et gravida est. Aenean maximus mattis felis, at efficitur sapien. Nullam volutpat mattis mauris, at dictum justo sollicitudin in. Sed volutpat elit nec vestibulum condimentum. Curabitur tincidunt urna cursus faucibus eleifend. Fusce at mauris in mi condimentum porta.
+
+Sed luctus nisi eu quam pretium volutpat. Curabitur volutpat, mi at euismod ultricies, mauris nibh egestas justo, ac lobortis arcu turpis in arcu. Fusce in dapibus nulla, eget porttitor arcu. Sed eleifend pellentesque libero at varius. Sed nec sem a augue mattis commodo at eget justo. Curabitur gravida augue sed fringilla egestas. Quisque consectetur iaculis scelerisque. Sed ut tortor placerat, vehicula purus viverra, varius arcu. Proin at nisi quis libero tincidunt condimentum.
+
+In lorem nisi, tincidunt vitae nunc ut, mattis placerat mauris. Fusce dolor mi, malesuada at ex consectetur, porttitor ullamcorper ante. Donec vel imperdiet diam, placerat ullamcorper sem. Mauris nunc sapien, porta quis nunc at, ultrices blandit massa. Nam nec felis leo. Nulla id porttitor arcu. Etiam eget turpis eget odio semper rhoncus sed ut quam. Duis dictum dapibus maximus. Curabitur eleifend laoreet mi eget volutpat. Donec ligula lectus, hendrerit quis nulla vitae, elementum pharetra tortor. In hac habitasse platea dictumst. Nullam rutrum scelerisque lobortis. Nullam ut diam ultricies, malesuada mi vel, efficitur lorem. Morbi bibendum luctus quam, a pellentesque enim vulputate ultrices.
+
+Nullam quis velit sit amet nisl accumsan volutpat in non tortor. Praesent ut turpis sed ligula pellentesque vulputate non et lectus. Aliquam quis varius purus. Fusce et erat pretium, bibendum velit in, sagittis purus. Maecenas efficitur at lectus at lobortis. Quisque tincidunt pellentesque quam, vitae volutpat lacus egestas non. Quisque blandit ullamcorper metus at venenatis. Sed a congue libero.
+
+Mauris vitae lacus nibh. Cras elementum sed erat a fringilla. Nam urna diam, hendrerit nec commodo sed, semper at nunc. Vestibulum pellentesque placerat faucibus. Phasellus sit amet leo nunc. Mauris nec dui vel enim egestas convallis. Ut lobortis orci id arcu auctor, quis commodo dolor commodo. Curabitur pulvinar velit id tortor congue maximus.
+
+Nunc convallis imperdiet velit ut mattis. Maecenas in rutrum leo. Mauris at blandit magna. In hac habitasse platea dictumst. Ut tincidunt dolor sed luctus vehicula. Nunc interdum dictum orci, vel euismod metus convallis vel. Proin vel quam et dolor vulputate pretium. Phasellus efficitur nec nunc vel mattis. Etiam volutpat, orci at ullamcorper tincidunt, mi massa congue nisi, in tincidunt erat diam et magna. Morbi id lobortis sapien. Nam id nisi id est congue vestibulum. Suspendisse laoreet ultrices tellus at fringilla. Pellentesque malesuada, enim sagittis suscipit viverra, mi odio tincidunt odio, ut tristique nisl quam at urna. Pellentesque sollicitudin lectus in massa vehicula elementum.
+
+Aliquam id volutpat sapien, in ornare nunc. Vestibulum luctus eu felis at ultrices. Proin ac rhoncus eros, sed viverra dui. Suspendisse tincidunt est lorem, vitae auctor elit finibus ut. Integer sodales dolor vel lorem lobortis dapibus. Sed cursus sit amet massa a rutrum. In a ultricies leo. Morbi ut erat non arcu blandit egestas ac in neque. Praesent facilisis mi vitae ligula dignissim, eget gravida odio auctor. Nunc lacinia ut massa pulvinar cursus. Morbi ac sodales neque, vitae pretium sem. Sed congue lectus enim, euismod malesuada velit egestas at. Ut fermentum molestie felis, quis vehicula est. Maecenas placerat leo nulla, vitae dapibus neque bibendum id. Proin sed euismod lorem.
+
+Etiam sit amet nunc lorem. Suspendisse at fermentum leo, non consequat nisi. Suspendisse at sem porta, tempus lorem et, rutrum mauris. Phasellus venenatis mi sit amet vulputate tempus. Aliquam at diam tellus. Pellentesque enim dui, egestas vel orci eu, iaculis semper risus. Morbi vitae facilisis tellus, at dapibus tellus.
+
+Pellentesque condimentum accumsan magna, in porttitor massa vulputate ut. Fusce elit nunc, facilisis in auctor in, consectetur hendrerit neque. Nam pretium sed magna sed eleifend. Vivamus non velit commodo, hendrerit felis in, ullamcorper quam. Ut elementum est lacus, nec interdum lectus pharetra eleifend. Pellentesque sit amet sapien volutpat, faucibus sapien sed, finibus tellus. Nulla sit amet nisi venenatis, dignissim nibh sit amet, viverra dolor. Nullam risus massa, lacinia non arcu non, luctus euismod tellus.
+
+Curabitur molestie mi sed nibh efficitur, sed ornare urna tincidunt. Suspendisse dictum enim quis augue ornare consectetur. Mauris arcu tortor, maximus et luctus id, accumsan nec dolor. Cras tellus mi, hendrerit sed dignissim quis, viverra sed justo. Vestibulum at tristique augue, eget tristique metus. Donec malesuada metus non aliquet porttitor. Mauris a felis maximus, fermentum nulla id, luctus orci. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut accumsan ligula condimentum, sodales diam commodo, mattis dui. Suspendisse tincidunt gravida sapien nec laoreet. Fusce posuere varius hendrerit. Vestibulum vestibulum metus elementum, luctus est eu, molestie justo.
+
+Praesent odio ipsum, maximus nec eros nec, congue tincidunt justo. Sed suscipit, metus facilisis lobortis vehicula, libero orci auctor ligula, eget hendrerit ligula metus in sapien. Etiam id metus non lectus eleifend lobortis in quis magna. Morbi ullamcorper accumsan ornare. Etiam id ex elementum, vehicula lorem quis, semper est. Curabitur bibendum dui nec eros placerat varius. Suspendisse pharetra lorem vitae tempor luctus. Integer dignissim, augue id porttitor dignissim, quam massa mattis nulla, in eleifend elit ligula eu ante. Aliquam gravida vestibulum ligula, ac gravida diam gravida a. Ut interdum sagittis velit, vitae eleifend lorem dignissim tincidunt. Quisque at sapien et velit ultricies pharetra. Sed convallis semper tincidunt. Sed magna risus, commodo ac mauris non, blandit tincidunt quam. Etiam tincidunt augue malesuada, imperdiet justo vitae, blandit leo.
+
+Suspendisse tempus ultrices dui nec molestie. Cras tempus ornare nulla nec tempus. Proin rutrum sed turpis sed sagittis. Curabitur interdum lacus ac lacus porta auctor. Phasellus non imperdiet quam, ac elementum neque. Fusce dui arcu, hendrerit eget molestie quis, pretium at purus. Sed interdum, eros sed malesuada accumsan, lacus diam iaculis nulla, nec dignissim ante magna ornare ipsum. In urna neque, interdum nec auctor at, lacinia ac nibh. Curabitur sagittis quam at bibendum dictum. In hac habitasse platea dictumst. Donec a nunc lorem. Mauris ornare orci at hendrerit tristique. Morbi ipsum lorem, sodales at mattis sit amet, convallis eu ipsum. Duis a justo nisi. Mauris varius urna nisl. In hac habitasse platea dictumst.
+
+Quisque at nisl pretium, lacinia arcu scelerisque, placerat tortor. Ut ac velit lacus. Aenean ullamcorper, nisl at semper tristique, risus neque accumsan sem, eu iaculis quam massa ut nulla. Mauris non velit elit. Curabitur vel enim eu lorem posuere euismod. Sed cursus accumsan massa, sed ullamcorper ligula accumsan ut. Cras vestibulum tempor sollicitudin. Proin vel dolor faucibus, fringilla nulla a, condimentum orci.
+
+Curabitur gravida est non nulla lobortis, non aliquet neque mollis. Suspendisse iaculis faucibus magna. Praesent et quam non odio egestas venenatis id vitae nisl. Morbi malesuada convallis mi ac tincidunt. Etiam justo sapien, fringilla quis felis quis, efficitur suscipit libero. Maecenas risus tortor, consectetur eget congue quis, mollis vitae turpis. Fusce blandit feugiat diam, at interdum enim egestas at. Maecenas ultricies euismod malesuada. Sed auctor enim nec neque volutpat, ornare accumsan tortor consequat. Donec a ipsum erat. Quisque lacinia turpis nisi, at pulvinar eros tempor id. Nullam libero lorem, aliquet vel consectetur eu, iaculis vitae sapien. Nulla ultricies viverra finibus. Proin dictum a purus sit amet commodo.
+
+Nulla lorem dolor, cursus vel felis sit amet, pellentesque cursus nunc. Phasellus gravida, ligula a sollicitudin porta, nibh massa euismod turpis, quis bibendum urna enim sit amet augue. Nullam sagittis lacus lorem, a blandit nulla tincidunt elementum. Duis ultrices odio ex, at pulvinar diam tristique sed. Quisque dictum a ex quis lobortis. Donec lacinia sollicitudin consequat. Vestibulum elit dui, dapibus nec nunc sit amet, placerat viverra arcu. Duis mollis a sapien in gravida. Ut ac facilisis lectus. Nullam cursus mauris et elit sagittis, at porta leo fringilla. Vestibulum faucibus elit turpis, vel lobortis lorem malesuada vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut rutrum lacinia dui pretium sodales. Fusce id placerat risus. Praesent ligula libero, rutrum non purus vitae, hendrerit malesuada metus.
+
+Praesent lacinia dapibus faucibus. Nullam venenatis, nisl quis hendrerit auctor, ipsum nisi tincidunt eros, id luctus libero neque ut mauris. In in vehicula lectus. Quisque imperdiet tincidunt dapibus. Proin massa lorem, pretium vitae laoreet non, aliquet sit amet mi. Duis ut massa elementum, auctor augue in, sagittis justo. Sed et venenatis neque, eu pulvinar tellus. Duis ac tincidunt leo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent accumsan imperdiet suscipit. Sed consectetur quis orci vitae vestibulum. Integer quis maximus nisi, eu mollis nisi.
+
+Cras sit amet ex eget odio bibendum ornare. Nullam bibendum congue ligula a suscipit. Fusce nec ultrices neque. Proin pretium libero mi, sit amet semper felis cursus non. Cras semper ullamcorper dolor, dictum hendrerit sem dapibus non. Nam pellentesque lacinia placerat. In sed mi at nibh posuere molestie. Aenean condimentum magna ipsum, at convallis tellus elementum sed. Suspendisse molestie magna ipsum, et vulputate eros fermentum ut. Ut vitae consequat nibh, vitae facilisis nisl. Sed eget magna id felis hendrerit condimentum. Morbi nisl tellus, consectetur sed diam non, posuere egestas erat. Nulla molestie ornare turpis, vitae rhoncus odio sodales in. Sed tristique nunc ante, in tincidunt odio suscipit sit amet.
